--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -887,7 +887,8 @@
         <ul class="form-style-1">
             <li>
                 <button type="button" id="btnSave"  class="btn btn-primary" onclick="Isvalidate('Update', 'JobOrder', @Request.Params["id"])">Save</button>
-                <a href="@Url.Action("IndexRptJobOrder", "RptJobOrder")" class="alink"><img src="@Url.Content("~/Images/addpicture.png")" class="btnimage-4" /></a>
+                <a href="#" onclick="OpenRptJobOrder(@Request.Params["id"])" class="alink" target="_blank"><img src="@Url.Content("~/Images/addpicture.png")" class="btnimage-4" /></a>
+                @*<button type="button" id="btnSave" class="btnCreate" onclick="OpenRptJobOrder(@Request.Params["id"])" formtarget="_blank"><img src="@Url.Content("~/Images/addpicture.png")" class="btnimage-2" id="BDCcreateDisable" /></button>*@
             </li>
         </ul>
     </form>
