--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -4,7 +4,7 @@
 
 <h2>WageTechnician</h2>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
-
+<script src="@Url.Content("~/Scripts/CUDS/WageTechnician/IndexWageTechnician.js")" type="text/javascript"></script>
 <table class="table table-striped">
     <thead class="bgthead">
         <tr>
@@ -18,104 +18,5 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>T00001</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician1</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง1</td>
-            <td class="hideANDseek">D</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>T00002</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician2</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง1</td>
-            <td class="hideANDseek">D</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>T00003</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician3</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง3</td>
-            <td class="hideANDseek">B</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>T00004</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician4</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง4</td>
-            <td class="hideANDseek">A</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>T00005</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician5</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง2</td>
-            <td class="hideANDseek">C</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>T00006</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician6</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง2</td>
-            <td class="hideANDseek">C</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>T00007</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>Technician7</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>ช่าง3</td>
-            <td class="hideANDseek">B</td>
-            <td>
-                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-    </tbody>
+    <tbody id="result"></tbody>
 </table>
