--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
         @* ---------------------------- NumberFormat -------------------------- *@
         <script src="@Url.Content("~/Scripts/NumberFormat/jquery.number.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/NumberFormat/jquery.number_Custom.js")" type="text/javascript"></script>
         @* ---------------------------- Tab -------------------------- *@
         <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
