--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "EditBDC";
 }
 
-<h2>BreakDown Cost Edit</h2>
+
 <script src="@Url.Content("~/Scripts/CUDS/BDC/EditBDC.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/BDC/BDCJob.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
@@ -60,7 +60,7 @@
                     <input type="text" id="txtDocver" name="field1" class="field-select-small-2" placeholder="V1" disabled />
                 </li>
                 <li>
-                    <input type="text" id="txtBDCNo" name="field1" class="field-select-small-2" disabled />
+                    <input type="text" id="txtBDCNo" name="field1" class="text-size120" disabled />
                     <input type="hidden" id="hidBDCNo" />
                 </li>
                 <li>
