--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewBag.Title = "CreateBDC";
 }
-<h2>BreakDown Cost Create</h2>
 <script src="@Url.Content("~/Scripts/CUDS/BDC/CreateBDC.js")" type="text/javascript"></script>
 @*<script src="@Url.Content("~/Scripts/CUDS/BDC/BDCJob.js")" type="text/javascript"></script>*@
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
@@ -59,10 +58,10 @@
                         <input type="text" id = "txtDocver"  name="field1" class="field-select-small-2" placeholder="1" disabled />
                     </li>
                     <li>
-                        <input type="text" id="txtBDCNo" name="field1" class="field-select-small-2" disabled />
+                        <input type="text" id="txtBDCNo" name="field1" class="text-size120" disabled />
                     </li>
                     <li>
-                        <label>ใบเสนอราคา</label>
+                        <label>ใบเสนอราคา<span class="required">*</span></label>
                         <input type="text" id = "txtQuoNo" name="txtQuoNo" class="field-select-big" placeholder="ใบเสนอราคา"  readonly="readonly" required />&nbsp;<a href="#" data-toggle="modal" data-target="#quotationDialog" onclick="BrowseQuotation()">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                     </a>
@@ -80,7 +79,7 @@
                 </ul>
                 <ul class="form-style-1">
                     <li>
-                        <label>หมายเหตุ<span class="required">*</span></label>
+                        <label>หมายเหตุ</label>
                         <textarea name="field5" id = "txtRemark" class="field-long field-textarea" autofocus></textarea>
                     </li>
                     <br />
