--- a/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "IndexUser";
 }
 
-<h2>IndexUser</h2>
+
 <script src="@Url.Content("~/Scripts/CUDS/User/IndexUser.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
     .paging-nav {
         text-align: right;
@@ -35,8 +36,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            @*<a href="/Authorization/CreateAuthorization"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>*@
-            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+            <label class="topictable">User</label>
+            <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
 </table>
