--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -210,7 +210,7 @@
                                                             <select id="cmbIncomeType" class="Select1"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitWeight" class="UnitWeight Number text-size80 textright" onchange="convertFloat()">
+                                                            <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onchange="CalSum()" />
@@ -246,7 +246,7 @@
                                                             <select class="Select1"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" onchange="convertFloat()" />
+                                                            <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright"/>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtQty" class="Quantity Number text-size80 textright" onchange="CalSum()" />
