--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -242,7 +242,7 @@
                                                                     <select id="cmbIncomeType" class="Select1"></select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitWeight" class="UnitWeight Number text-size80 textright">
+                                                                    <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onchange="CalSum()" />
